--- a/main.html
+++ b/main.html
@@ -6,10 +6,13 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="accio" id="job">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<main>
+		<p class="hello-accio">Hello Accio Job</h1>
+	</main>
 
 </body>
 
