--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<main>
-		<p class="hello-accio">Hello Accio Job</h1>
+		<p class="hello-accio">Hello Accio Job</p>
 	</main>
 
 </body>
