--- a/main.html
+++ b/main.html
@@ -6,11 +6,11 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="accio" id="job">
+<body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<main>
+	<main class="accio" id="job">
 		<p class="hello-accio">Hello Accio Job</p>
 	</main>
 
