--- a/main.html
+++ b/main.html
@@ -7,12 +7,15 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<!-- the entire body must be written by student 
+   
 	<main class="accio" id="job">
 		<p class="hello-accio">Hello Accio Job</p>
-	</main>
+	</main> -->
+	 <main class="accio" id="job">
+        <p class="hello-accio">Hello Accio Job</p>
+    </main>
+</body>
 
 </body>
 
