--- a/main.html
+++ b/main.html
@@ -7,14 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student 
+	<!-- the entire body must be written by student -->
    
 	<main class="accio" id="job">
 		<p class="hello-accio">Hello Accio Job</p>
-	</main> -->
-	 <main class="accio" id="job">
-        <p class="hello-accio">Hello Accio Job</p>
-    </main>
+	</main> 
+	
 </body>
 
 </body>
